fixed paths and added jquery-1.7

--- a/public/chatty.html
+++ b/public/chatty.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Chatty chat</title>
-	<script src="jquery-1.7.min.js"></script>
 	<script src="socket.io/socket.io.js"></script>
-	<script src="chatty-client.js"></script>
-	<link rel="stylesheet" href="chatty.css"/>
+	<script src="js/jquery-1.7.min.js"></script>
+	<script src="js/chatty-client.js"></script>
+	<link rel="stylesheet" href="css/chatty.css"/>
 </head>
 <body>
   <section id="chat">
