--- a/public/chatty.html
+++ b/public/chatty.html
@@ -17,7 +17,7 @@
     </section> 
     <footer id="chat-input">
       <label for="send-message">Send message:</label>
-      <input type="text" id="send-message" size="40">
+      <input type="text" id="send-message" size="40" autofocus>
     </footer>  
     <audio id="sound" src="" autoplay></audio>
   </section>
