applied some styling

--- a/public/chatty.html
+++ b/public/chatty.html
@@ -10,6 +10,9 @@
 <body>
   <section id="chat">
     <aside>
+      <header id="online">
+        <h2>Users online</h2>
+      </header>
       <section id="users">
       </section>
     </aside>  
