--- a/public/chatty.html
+++ b/public/chatty.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/chatty.css"/>
 </head>
 <body>
-  <section id="chat">
+  <section id="chat" class="stripes">
     <aside>
       <header id="online">
         <h2>Users online</h2>
